# synchro

./: Cargo.toml  PHASES.md
src/: cloud_filter.rs  extra.rs  main.rs  quic.rs  quic_old.rs  real_main.rs  sample.rs  util.rs
src/cloud_filter/: callbacks.rs  file.rs  operations.rs  placeholders.rs  prelude.rs  sync_root.rs
src/cloud_filter/callbacks/: structures.rs
src/extra/: in_memory.rs
src/util/: windows.rs
src/util/windows/: cloud_filter.rs  dynamic_buf_ptr.rs  local_pwstr.rs  owned_wstr.rs  prelude.rs  ptr.rs  strings.rs
