[package]
name = "synchro-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
bytes = "1.2.1"
clap = { version = "3.2.17", features = ["derive"] }
futures = "0.3.23"
ignore = "0.4.18"
parking_lot = "0.12.1"
quiche = "0.14.0"
relative-path = "1.7.2"
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
trees = "0.4.2"
