[package]
name = "winsynctest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.11", features = ["derive"] }
notify = "6.0.1"
tap = "1.0.1"
widestring = "1.0.2"
dashmap = { version = "5.5.0", optional = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Storage_CloudFilters",
    "Win32_Foundation",
    "Win32_System_CorrelationVector",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Storage_Provider",
    "Storage_Streams", # for IBuffer, not that we can use it?
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Console",

    "Foundation",
]

[features]
in_memory = ["dep:dashmap"]

